Tue Feb 17 21:23:20 MET 1998 Sven Neumann <sven@gimp.org>

	* app/fileops.c: hide the help buttons since we have no 
	help (yet)

Tue Feb 17 20:55:12 MET 1998 Sven Neumann <sven@gimp.org>

	* gimp_splash.ppm: added the splash-screen image drawn 
	by Jens Lauterbacher to the distribution 

	* app/appenv.h
	* app/app_procs.c
	* app/main.c: added the splash-image to the startup-window;
	new command-line options: --no-splash, --no-splash-image
	
	* ps_menurc: changed to reflect changes to the 
	menu-structure
	
Tue Feb 17 09:24:44 EST 1998 Adrian Likins <adrian@gimp.org>

	* updated all of Sven Neumanns scripts. Including 
	blend-anim.scm, waves-anim.scm, drop-shadows.scm, 
	perspective-shadow.scm, round-corners.scm, slide.scm,
	and selection-round.scm.

Sat Feb 14 15:34:08 PST 1998 Manish Singh <yosh@gimp.org>

	* app/iscissors.c: iscissors released for initial public
	consumption

Sat Feb 14 15:01:46 PST 1998 Manish Singh <yosh@gimp.org>

	* Fixed up docs and autoconf interaction (part of
	gimp-rrh-980125-0)

Fri Feb 13 02:00:01 PST 1998 Manish Singh <yosh@gimp.org>

	* libgimp/gimp.c
	* app/menus.c: fixes for the g_string -> g_str change in glib

        * updated gfig

Thu Feb 12 13:10:50 EST 1998 Adrian Likins <adrian@gimp.org>

	*libgimp/gimp.h
		applied a patch from Lauri Alanko to make
	  libgimp/pdb bindings for some languages a little easier

Wed Feb  4 19:04:35 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* channel.c 
	* channel.h
 	* disp_callbacks.c
 	* gimage.c
 	* layer.c
 	* layer.h
	* layers_dialog.c
	* undo.c: More GTK refcount-related changes.  (We're not there
	yet, but we're getting closer.)

Tue Feb  3 17:52:34 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/interface.[ch] app/app_procs.[ch]: Changes to deal with new
	GTK refcounting regime.

Mon Feb  2 19:19:16 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/channels_dialog.c: 
	* app/layers_dialog.c:  Added gtk_widget_ref and gtk_widget_unref